# fson

./: .gitignore  CMakeLists.txt  README.md  fjson.f95  fson.f95  fson_string_m.f95  fson_test.py  fson_test_run.py  fson_test_setup.py  fson_value_m.f95  makefile  meson.build  readme.md  string_m.f95  test1.json  value_m.f95
.github/workflows/: unittests.yml  unittests_cmake.yml
cmake/: FSONConfig.cmake.in  FindZOFU.cmake
example/: 1_basic.f95
examples/: example1.f95
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: fson.f90  fson.f95  fson_example.f95  fson_path_m.f90  fson_path_m.f95  fson_string_m.f90  fson_string_m.f95  fson_value_m.f90  fson_value_m.f95
src/examples/: basic.f90  example1.f90  example2.f90  test1.json
src/tests/: fruit_driver.f90  fson_test.f90  fson_test.py  fson_test2.f90  fson_test2_zofu.f90  fson_test_zofu.f90  makefile  test1.json  test2.json  test3.json
src/tests/fruit/: fruit.f90
subprojects/: zofu.wrap
